# Auto-Quant

./: .gitignore  README.md  analysis.ipynb  config.json  prepare.py  program.md  pyproject.toml  run.py
user_data/strategies/: AutoResearch.py
versions/: README.md
versions/0.1.0/: meta.yaml  results.tsv  retrospective.md  strategy.final.py
