[project]
name = "auto-quant"
version = "0.1.0"
description = "LLM-native autonomous quant research loop — Karpathy's autoresearch pattern applied to FreqTrade strategies on BTC/ETH."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "freqtrade>=2025.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "jupyter>=1.0",
]

[tool.uv]
package = false
